# CudaBasedSoftRenderer

./: CMakeLists.txt  README.md  main.cpp
include/geometry/: simple_polygon_mesh.h
include/renderer/: camera.h  device_structs.h  device_structs_manage.h  framebuffer.h  geometry_queries.h  picture.h  pipeline_funtions.h  pipeline_parameters.h  rasterizer.h  render_obj.h  texture.h
include/utils/: cuda_check.h  device_math_helper.h  mat4.h  mat4.ipp  quat.h  transform.h  vector2.h  vector2.ipp  vector3.h  vector3.ipp  vector4.h  vector4.ipp  vertex_attribute.h
scene/: single_bunny.txt  transparent.txt
src/geometry/: simple_polygon_mesh.cpp
src/renderer/: picture.cpp  rasterizer.cu  render_obj.cpp  texture.cu
src/utils/: cuda_check.cpp  transform.cpp
